BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Stakeholder_Layout_vod__c.object
<CustomObject>
    <description>Used to configure the KOL Stakeholder profile page</description>
    <fields>
        <fullName>zvod_ACCT_Career_Status_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field that makes career status available on the KOL profile page.</description>
        <label>Career Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_ACCT_Group_Specialty_1_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field that makes group specialty available on the KOL profile page.</description>
        <label>Group Specialty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_ACCT_KOL_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field that makes KOL indicator available on the KOL profile page.</description>
        <label>KOL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_ACCT_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field that makes Stakeholder name available on the KOL profile page.</description>
        <label>Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_ACCT_PersonDepartment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field that makes stakeholder department available on the KOL profile page.</description>
        <label>Department</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_ACCT_PersonEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field that makes stakeholder email available on the KOL profile page.</description>
        <label>Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_ACCT_Phone__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field that makes phone number available on the KOL profile page.</description>
        <label>Phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_ACCT_Primary_Parent_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field that makes stakeholder&apos;s primary Institution available on the KOL profile page.</description>
        <label>Institution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_ACCT_Specialty_1_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field that makes stakeholder specialty available on the KOL profile page.</description>
        <label>Specialty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_ACCT_Specialty_2_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field that makes second specialty available on the KOL profile page.</description>
        <label>Specialty 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_ACCT_Territory_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field that makes territory available on the KOL profile page.</description>
        <label>Territory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_ADDR_Primary_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field that makes address available on the KOL profile page.</description>
        <label>Primary Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_CCLB_Chart_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field that makes company collaboration summary chart available on the KOL profile page.</description>
        <label>zvod_CCLB_Chart_vod</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_CCLB_Company_Name_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field that makes company collaboration name available on the KOL profile page.</description>
        <label>Company Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_CCLB_Details_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field that makes company collaboration details available on the KOL profile page.</description>
        <label>Details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_CCLB_Relationship_Strength_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field that makes company collaboration strength available on the KOL profile page.</description>
        <label>Relationship Strength</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_CT_Chart_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field that makes clinical trial summary chart available on the KOL profile page.</description>
        <label>zvod_CT_Chart_vod</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_CT_End_Date_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field that makes clinical trial end date available on the KOL profile page.</description>
        <label>End Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_CT_ID_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field that makes clinical trial ID available on the KOL profile page.</description>
        <label>ID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_CT_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field that makes clinical trial name available on the KOL profile page.</description>
        <label>Title</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_CT_Phase__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field that makes clinical trial phase available on the KOL profile page.</description>
        <label>Clinical Trial Phase</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_CT_Start_Date_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field that makes clinical trial start date available on the KOL profile page.</description>
        <label>Start Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_EVENTATTENDEE_Position_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field that makes medical attendee position available on the KOL profile page.</description>
        <label>Position</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_EVENTATTENDEE_Talk_Title_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field that makes medical attendee talk title available on the KOL profile page.</description>
        <label>Talk Title</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_FOCUSAREA_Chart_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field that makes focus area summary charrt available on the KOL profile page.</description>
        <label>zvod_FOCUSAREA_Chart_vod</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_FOCUS_Focus_Name_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field that makes focus area available on the KOL profile page.</description>
        <label>Focus Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_FOCUS_High_Focus_Score_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field that makes focus area high score available on the KOL profile page.</description>
        <label>Highest Score</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_FOCUS_Total_Focus_Score_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field that makes focus area score available on the KOL profile page.</description>
        <label>Stakeholder Score</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_KOL_Activity_Index_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field that makes Index charts available on the KOL Stakeholder profile page</description>
        <label>zvod_KOL_Activity_Index_vod</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_KOL_Scientific_Index_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field that makes Index charts available on the KOL Stakeholder profile page</description>
        <label>zvod_KOL_Scientific_Index_vod</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_MEDEVENT_Address_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field that makes medical event address available on the KOL profile page.</description>
        <label>Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_MEDEVENT_Chart_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field that makes medical event summery chart available on the KOL profile page.</description>
        <label>zvod_MEDEVENT_Chart_vod</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_MEDEVENT_Country_Name_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field that makes medical event country available on the KOL profile page.</description>
        <label>Country</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_MEDEVENT_End_Date_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field that makes medical event end date available on the KOL profile page.</description>
        <label>End Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_MEDEVENT_Event_Display_Name_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field that makes medical event available on the KOL profile page.</description>
        <label>Event Title</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_MEDEVENT_Event_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field that makes medical event type available on the KOL profile page.</description>
        <label>Event Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_MEDEVENT_Start_Date_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field that makes medical event start date available on the KOL profile page.</description>
        <label>Start Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_POSITION_Chart_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field that makes position summary chart available on the KOL profile page.</description>
        <label>zvod_POSITION_Chart_vod</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_POSITION_End_Date_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field that makes position end date available on the KOL profile page.</description>
        <label>End Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_POSITION_Institution_Type_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field that makes position institution type available on the KOL profile page.</description>
        <label>Institution Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_POSITION_Institution_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field that makes institution available on the KOL profile page.</description>
        <label>Institution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_POSITION_Job_Title_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field that makes position title available on the KOL profile page.</description>
        <label>Job Title</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_POSITION_Past_Position_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field that makes past position available on the KOL profile page.</description>
        <label>Past Position</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_POSITION_Position_Type_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field that makes stakeholder primary position available on the KOL profile page.</description>
        <label>Position</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_POSITION_Primary_Position_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field that makes primary position available on the KOL profile page.</description>
        <label>Primary Position</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_POSITION_Start_Date_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field that makes position start date available on the KOL profile page.</description>
        <label>Start Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_PUB_Chart_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field that makes publication summary chart available on the KOL profile page.</description>
        <label>zvod_PUB_Chart_vod</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_PUB_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field that makes publication date available on the KOL profile page.</description>
        <label>Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_PUB_Journal_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field that makes journals available on the KOL profile page.</description>
        <label>Journals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_PUB_PubMed_ID_Name_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Pull in field that males publication ID name available on the KOL profile page</description>
        <label>PubMed ID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_PUB_PubMed_URL_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Pull in field that makes publication PubMedbURL available on the KOL profile page.</description>
        <label>PubMed URL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_PUB_Publication_Type_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field that makes publication type available on the KOL profile page.</description>
        <label>Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_PUB_Title__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field that makes publication title available on the KOL profile page.</description>
        <label>Title</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_SHCT_Role_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field that makes clinical trial role available on the KOL profile page.</description>
        <label>Role</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_SHPUB_Authorship_Position_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field that makes authorship position available on the KOL profile page.</description>
        <label>Authorship Position</label>
        <type>Checkbox</type>
    </fields>
    <label>Stakeholder Profile Layout</label>
    <nameField>
        <displayFormat>SPL-{00000}</displayFormat>
        <label>Stakeholder Profile Layout Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stakeholder Profile Layouts</pluralLabel>
    <recordTypes>
        <fullName>KOL_Layout_vod</fullName>
        <active>true</active>
        <description>Used for KOL layout</description>
        <label>KOL_Layout_vod</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>